added github link

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 
     <link rel="shortcut icon" href="img/Calculator-icon.png" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:100,400,500|Roboto:300,400|Orbitron:400" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU"
+        crossorigin="anonymous">
     <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/style.css">
     <title>Cryptocurrency Calculator</title>
@@ -68,6 +70,7 @@
 
     <footer class="footer">
         <span>Copyright &copy; 2018 D@VE</span>
+        <a href="https://github.com/idlevandal/cryptocurrency-calc" target="_blank"><i class="fab fa-github"></i></a>
         <div class="divider"></div>
         <a href="#">Home</a>
         <a href="contact.html">Contact</a>
