--- a/contact.html
+++ b/contact.html
@@ -32,7 +32,7 @@
             <h3 class="contact__heading">Email D@ve</h3>
             <div class="alert">Your message has been sent</div>
 
-            <form id="contactForm" method="POST" action="https://formspree.io/davetvmusic@hotmail.com">
+            <form id="contactForm" method="POST" action="https://formspree.io/your@email.com">
                 <div class="hpot">
                     <label>Empty<input name="_gotcha"></label>
                 </div>
